# wasm-docker-extension

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  metadata.json
ui/: package-lock.json  package.json
ui/src/: App.tsx
vm/: Cargo.toml  main.rs
